<resources>
    <string name="app_name">businessKineret</string>
    <string name="ages">From birth to two years</string>
    <string name="professional">Infant Development Professional</string>

    <string name="firstStep"><a href="http://www.firststepmethod.com/">First Step- For Your Child\'s Development</a> \ngraduate</string>
    <string name="phoneNumber">052-1234567</string>
    <string name="mail">kineret@gmail.com</string>
    <string name="workshops_counseling">Group workshops \nIndividual counseling</string>
    <string name="kineret_fartuk">Kineret Fartuk</string>

</resources>
