<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyBlue"
    android:orientation="vertical"
    tools:context="com.noah.businesskineret.MainActivity">

    <TextView
        style="@style/titles"
        android:padding="20dp"
        android:text="@string/kineret_fartuk"
        android:textSize="26sp" />

    <TextView
        style="@style/titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/professional" />

    <TextView
        style="@style/titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ages" />

    <TextView
        android:id="@+id/firstStep"
        style="@style/titles"
        android:layout_marginTop="20dp"
        android:text="@string/firstStep"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/rainbow"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="-70dp"
        android:layout_marginTop="-30dp"
        android:src="@drawable/rainbow" />

    <ImageView
        android:id="@+id/baby"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="-5dp"
        android:src="@drawable/baby1" />

    <TextView
        style="@style/titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"

        android:text="@string/workshops_counseling" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageMail"
            style="@style/icons"
            android:src="@drawable/mail" />

        <TextView
            android:id="@+id/mail"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autoLink="email"
            android:text="@string/mail"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagePhone"
            style="@style/icons"
            android:src="@drawable/phone" />


        <TextView
            android:id="@+id/phone"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autoLink="phone"
            android:text="@string/phoneNumber" />

    </LinearLayout>


</LinearLayout>
